set(SRC_LIST main.cc)
set(LIBS spdlog api app layer global)
set(CMAKE_INSTALL_RPATH "/usr/local/lib")
add_subdirectory(./api)
add_subdirectory(./app)
add_subdirectory(./base)
add_subdirectory(./layer)
add_subdirectory(./global)

add_executable(atsys ${SRC_LIST})
target_link_libraries(atsys ${LIBS})
install(TARGETS atsys DESTINATION sbin)
